Tue Sep 13 21:23:51 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* README.md: Drop support for BeOS now that Haiku is stable since
	  2.3.0.

	* README.ja.md: ditto.

Tue Sep 13 21:11:56 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (STR_EMBEDABLE_P): extract the predicate macro to tell
	  if the given length is capable in an embedded string, and fix
	  possible integer overflow.

Tue Sep 13 18:37:08 2016  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_exception.rb: fix thread issues.
	  * use Queue instead of a local variable for synchronization.
	  * join created thread to solve leaking threads warning.

Tue Sep 13 16:07:26 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* string.c (rb_str_set_len): The buffer overflow check is wrong. The
	  space for termlen is allocated outside the capacity returned by
	  rb_str_capacity(). This fixes r41920 ("string.c: multi-byte
	  terminator", 2013-07-11).  [ruby-core:77257] [Bug #12757]

	* test/-ext-/string/test_set_len.rb (test_capacity_equals_to_new_size):
	  Test for this change. Applying only the test will trigger [BUG].

Tue Sep 13 06:03:34 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* common.mk (benchmark): fix lib path.

Tue Sep 13 00:39:47 2016  Aaron Patterson <tenderlove@ruby-lang.org>

	* class.c (singleton_class_of): Copy superclass serial number to
	  singleton class.  This improves singleton class IMC hit rates.
	  [Feature #12364] [ruby-core:75425]

Mon Sep 12 13:46:23 2016  Anton Davydov  <mail@davydovanton.com>

	* lib/uri/mailto.rb: Removed needless `return` and use `.` instead of `::`
	  with class method.
	* test/uri/test_mailto.rb: Added tests for coverage.
	  [fix GH-1426][Misc #12750][ruby-core:77242]

Sun Sep 11 21:30:26 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: News about Module.used_modules.

Sun Sep 11 19:06:49 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_write_console): should set written length as the
	  return value.  [Bug #12748] [ruby-dev:49786]
