@@ -1,3 +1,8 @@
+Tue Sep 13 21:27:35 2016  Kazuki Yamaguchi  <k@rhe.jp>
+
+	* string.c (STR_EMBEDDABLE_P): Renamed from STR_EMBEDABLE_P(). And use
+	  it in more places.
+
 Tue Sep 13 21:23:51 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* README.md: Drop support for BeOS now that Haiku is stable since
